--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -1,31 +1,30 @@
 .hero{
-    padding: 0 5rem;
+    padding: 0 16rem;
     height: 100vh;
-    background-color: rgb(134, 163, 255);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     &__content{
         width: 60%;
+        text-align: center;
         display: flex;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
         gap: 2rem;
 
         &-text{
-            font-size: 3rem;
-            font-weight: 800;
+            line-height: 110px;
+            font-size: 5rem;
+            font-weight: 700;
+            margin-bottom: 2rem;
         }
 
         &-buttons{
             display: flex;
-            gap: 5rem;
+            gap: 1rem;
             height: 3rem;
-            width: 100%;
         }
-    }
-
-    &__img{
-        width: 30vw;
     }
 }
