--- a/frontend/src/components/footer/Footer.scss
+++ b/frontend/src/components/footer/Footer.scss
@@ -1,12 +1,3 @@
-@import "https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap";
-:root {
-	--primary-color: #047aed;
-	--secondary-color: #1c3fa8;
-	--dark-color: #002240;
-	--light-color: #f4f4f4;
-	--success-color: #5cb85c;
-	--error-color: #d9534f;
-}
 
 $color_1: var(--light-color);
 $color_2: inherit;
@@ -16,12 +7,13 @@ $background-color_1: var(--dark-color);
 
 
 .footer-clean {
-	padding: 50px 0;
-	background-color: #002240;
-	color: $color_1;
-    .container {
-        background-color: #002240;
+	padding: 10px 0;
+    background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, #01005C 77.92%);
+    color: $color_1 ;
+    .content {
         width: 100%;
+		height: auto;
+		padding: 20px;
     }
 	h3 {
 		margin-top: 0;
@@ -30,12 +22,12 @@ $background-color_1: var(--dark-color);
 		font-size: 16px;
 	}
 	ul {
-		padding: 0;
 		list-style: none;
 		line-height: 1.6;
 		font-size: 14px;
 		margin-bottom: 0;
 		a {
+			padding: 12px;
 			color: $color_2;
 			text-decoration: none;
 			opacity: 0.8;
@@ -44,11 +36,10 @@ $background-color_1: var(--dark-color);
 			}
 		}
 	}
-	.item.social {
+	.item_social {
 		width: auto;
 		text-align: center;
 		i {
-			margin: 0 20px;
 			font-size: 40px;
 			color: $color_3;
 			&:hover {
@@ -57,6 +48,61 @@ $background-color_1: var(--dark-color);
 		}
 	}
 }
+
+
+.content_flex{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+	justify-content: space-around;
+	// LEFT SIDE STYLE :
+   .left_side{
+	.footer_nav ul{
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		gap: 20px;
+	}
+	.middle{
+		display: flex;
+		justify-content: center;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		align-items: center;
+		margin: 20px;
+		.logo{
+           margin-right: 30px;
+		}
+		.item_social a{
+             padding: 0.5rem;
+		}
+	}
+   }
+   // RIGHT SIDE STYLE :
+   .right_side{
+	display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+
+   }
+}
+
+
 .copyright {
-	margin-top: 20px;
+	text-align: center;
+	font-family: 'Jost';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 150%;
+	letter-spacing: 0.01em;
+    color: #DBDCDC;
+}
+hr{
+	margin-top: 0.5rem;
+    border: 0;
+    border: 0.1px solid #E5E5E5;
 }
