Editing contact form

--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -5,6 +5,7 @@ $color_3: #fff;
 .contaienr {
 	width: 60%;
 	height: 651px;
+	display: flex;
 	align-items: center;
 	padding: 20px 60px 30px 40px;
     box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
