--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -2,84 +2,72 @@ $color_1: #3e2093;
 $color_2: #afafb6;
 $color_3: #fff;
 
-.contaienr {
-	width: 60%;
-	height: 651px;
-	align-items: center;
-	padding: 20px 60px 30px 40px;
-    box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
-    backdrop-filter: blur(24px);
+.container {
+  z-index: -1;
+  width: 100%;
+  height: 651px;
+  align-items: center;
+  padding: 20px 60px 30px 40px;
+  backdrop-filter: blur(24px);
+  border-radius: 10px;
+}
+
+.contact-text {
+  text-align: center;
+  margin: 15px;
+  .Contact_us {
+    background: linear-gradient(
+      to right,
+      rgba(67, 88, 255, 1) 0%,
+      rgba(31, 38, 86, 1) 100%
+    );
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+  }
+  p {
+    color: rgba(17, 22, 92, 1);
+  }
+}
+
+.contactForm {
+  .Name_Area {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    .name_input {
+      width: 50%;
+    }
+  }
+  .input {
+    margin: 10px;
+    input {
+      height: 3.6rem;
+      border-radius: 10px;
+    }
+    textarea {
+      max-height: 13.323rem;
+      min-height: 13.323rem;
+      border-radius: 10px;
+      white-space: pre;
+    }
+  }
+  .submit_btn {
+    margin: 15px auto;
+    width: 19.5rem;
+    height: 3.5rem;
+    background: linear-gradient(180deg, #1614d1 0%, #1f2656 35.94%);
     border-radius: 10px;
-	.content{
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	
-	}
-}
-
-
-.contact-text{
-	text-align: center;
-	margin: 15px;
-	.Contact_us{
-		background: linear-gradient(to right, rgba(67, 88, 255, 1) 0%, rgba(31, 38, 86, 1) 100%);
-       -webkit-text-fill-color: transparent;
-       background-clip : text;
-      
-		font-family: Montserrat;
-	
-		
-		
-	}
-	p{
-		color: rgba(17, 22, 92, 1);
-	}
-}
-
-.contactForm{
-	.Name_Area{
-		display: flex;
-		justify-content: center;
-		gap: 10px;
-		.name_input{
-			width: 50%;
-		}
-	}
-	.input {
-		margin: 10px;
-		input {
-			height: 3.6rem ;
-			border-radius: 10px;
-		}
-		textarea {
-			max-height: 13.323rem;
-			min-height: 13.323rem;
-			border-radius: 10px;
-			white-space: pre;
-            
-		}
-	}
-	.submit_btn {
-		margin: 15px auto;
-	    width: 19.5rem;
-		height: 3.5rem;
-		background: linear-gradient(180deg, #1614D1 0%, #1F2656 35.94%);
-        border-radius: 10px;
-		text-align: center;
-		line-height: 3.5rem;
-		cursor: pointer;
-		 input{
-			border: none;
-			background: transparent;
-			color: rgba(255, 255, 255, 1);
-            font-family: Montserrat;
-			font-weight: 700px;
-			line-height: 24px;
-			font-size: 20px;
-			cursor: pointer;
-			
-		}
-	}
-
+    text-align: center;
+    line-height: 3.5rem;
+    cursor: pointer;
+    input {
+      border: none;
+      background: transparent;
+      color: rgba(255, 255, 255, 1);
+      font-weight: 700px;
+      line-height: 24px;
+      font-size: 20px;
+      cursor: pointer;
+    }
+  }
 }
