--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -1,30 +1,48 @@
-.hero{
-    padding: 0 16rem;
-    height: 100vh;
+.hero {
+  height: 100vh;
+  background: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(255, 189, 91, 1) 34%
+  );
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  &__line {
+    position: absolute;
+    right: 20rem;
+  }
+
+  &__decoration {
+    position: absolute;
+    left: 25rem;
+    top: 11rem;
+  }
+
+  &__content {
+    width: 60%;
+    text-align: center;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
 
-    &__content{
-        width: 60%;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        gap: 2rem;
-
-        &-text{
-            line-height: 110px;
-            font-size: 5rem;
-            font-weight: 700;
-            margin-bottom: 2rem;
-        }
-
-        &-buttons{
-            display: flex;
-            gap: 1rem;
-            height: 3rem;
-        }
+    &-text {
+      color: var(--secondary-color);
+      line-height: 100px;
+      font-size: 5rem;
+      font-weight: 1000;
+      margin-bottom: 2rem;
     }
+
+    &-buttons {
+      display: flex;
+      gap: 1rem;
+      height: 3rem;
+    }
+  }
 }
