--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -5,7 +5,6 @@
     rgba(255, 255, 255, 0.5) 0%,
     rgba(255, 189, 91, 1) 34%
   );
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,15 +28,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     gap: 2rem;
+
     &-text {
-      color: var(--secondary-color);
+      color: var(--dark-color);
       line-height: 100px;
-      font-size: 5rem;
+      font-size: 3rem;
       font-weight: 1000;
       margin-bottom: 2rem;
     }
+
     &-buttons {
       display: flex;
       gap: 1rem;
