--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -2,6 +2,8 @@
   padding: 10px;
   height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
   background: linear-gradient(
     135deg,
     rgba(255, 255, 255, 0.5) 0%,
@@ -9,10 +11,11 @@
   );
 
   &__container {
-    width: 100%;
+    width: 75%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    gap: 3rem;
 
     .title__container {
       position: relative;
@@ -20,9 +23,9 @@
         background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
-        font-size: 4rem;
+        font-size: 3rem;
         border-radius: 20px;
-        padding: 1rem 1.2rem;
+        padding: 0.75rem 1.5rem;
         width: fit-content;
         text-align: center;
         border: 1px solid white;
@@ -38,10 +41,10 @@
 
       .starImg {
         position: absolute;
-        bottom: -13px;
-        left: -31px;
-        width: 4.5rem;
-        height: 4.5rem;
+        bottom: -10px;
+        left: -20px;
+        width: 3rem;
+        height: 3rem;
       }
     }
 
@@ -49,11 +52,11 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
+      gap: 5rem;
 
       .paragraph {
         font-weight: 400;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 1.3rem;
         background: radial-gradient(
           38.44% 68.39% at 50% 50%,
           #0621fe 0%,
@@ -63,11 +66,10 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
       }
-
-      .cjemImg {
-        width: 398px;
-        height: 302px;
-      }
     }
+  }
+
+  .cjemImg {
+    width: 25rem;
   }
 }
