--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -12,13 +12,14 @@
 
   &__line {
     position: absolute;
-    right: 20rem;
+    right: 15rem;
   }
 
   &__decoration {
     position: absolute;
-    left: 25rem;
-    top: 11rem;
+    width: 100px;
+    left: 20rem;
+    top: 8rem;
   }
 
   &__content {
@@ -32,7 +33,7 @@
 
     &-text {
       color: var(--dark-color);
-      line-height: 100px;
+      line-height: 4rem;
       font-size: 3rem;
       font-weight: 1000;
       margin-bottom: 2rem;
@@ -40,8 +41,8 @@
 
     &-buttons {
       display: flex;
-      gap: 1rem;
-      height: 3rem;
+      gap: 0.5rem;
+      height: 1.5rem;
     }
   }
 }
