--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -1,11 +1,21 @@
 .jeea {
-  padding-top: 10px;
+  padding: 10px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(
+    320deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(255, 189, 91, 1) 34%
+  );
+
   &__container {
+    width: 75%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 3rem;
 
     .title__container {
       position: relative;
@@ -13,8 +23,9 @@
         background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
+        font-size: 3rem;
         border-radius: 20px;
-        padding: 10px 16px;
+        padding: 0.75rem 1.5rem;
         width: fit-content;
         text-align: center;
         border: 1px solid white;
@@ -30,39 +41,36 @@
 
       .starImg {
         position: absolute;
-        bottom: -13px;
-        right: -31px;
-        width: 63.85px;
-        height: 56.42px;
+        bottom: -10px;
+        left: -20px;
+        width: 3rem;
+        height: 3rem;
       }
     }
 
     .content {
       display: flex;
-      justify-content: center;
       flex-direction: row-reverse;
+      justify-content: space-around;
       align-items: center;
-      gap: 60px;
-      flex-wrap: wrap;
+      gap: 5rem;
+
       .paragraph {
-        max-width: 350px;
         font-weight: 400;
-        font-size: 20px;
-        line-height: 30px;
+        font-size: 1.3rem;
         background: radial-gradient(
-            38.44% 68.39% at 50% 50%,
-            #0621fe 0%,
-            #1f2656 100%
-          )
-          /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+          38.44% 68.39% at 50% 50%,
+          #0621fe 0%,
+          #1f2656 100%
+        );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
       }
-      .jeeaImg {
-        width: 398px;
-        height: 302px;
-      }
     }
+  }
+
+  .jeeaImg {
+    width: 25rem;
   }
 }
