--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -3,29 +3,51 @@
   flex-direction: column;
   align-items: center;
   z-index: -1;
-  width: 100%;
-  align-items: center;
-  padding: 80px;
+  padding: 0px 90px;
+  -webkit-backdrop-filter: blur(24px);
   backdrop-filter: blur(24px);
   border-radius: 10px;
-  height: 100vh;
+  height: 86vh;
+  box-shadow: 0px 1px 7px 4px rgb(0 0 0 / 15%);
+  justify-content: center;
+  margin-top: 4rem;
   .content {
     width: 90%;
-    height: 100%;
   }
-
-
 .contact-text {
   text-align: center;
   margin: 15px;
-  .Contact_us {
-    background: linear-gradient(
-      to right,
-      rgba(67, 88, 255, 1) 0%,
-      rgba(31, 38, 86, 1) 100%
-    );
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+  .title__container {
+    position: relative;
+    width: fit-content;
+    margin: auto;
+    .title {
+      margin: 10px auto;
+      box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
+      backdrop-filter: blur(24px);
+      font-size: 2.5rem;
+      border-radius: 20px;
+      padding: 0.75rem 1.5rem;
+      width: fit-content;
+      text-align: center;
+      border: 1px solid white;
+      background: radial-gradient(
+        51.72% 61.73% at 50% 50%,
+        #4358ff 0%,
+        #1f2656 63.85%
+      );
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+     
+    }
+    .starImg {
+      position: absolute;
+      bottom: -15px;
+      left: -15px;
+      width: 3rem;
+      height: 3rem;
+    }
   }
   p {
     color: rgba(17, 22, 92, 1);
@@ -48,10 +70,11 @@
       border-radius: 10px;
     }
     textarea {
-      max-height: 13rem;
-      min-height: 13rem;
+      max-height: 10rem;
+      min-height: 10rem;
       border-radius: 10px;
       white-space: pre;
+      resize: none;
     }
   }
   .submit_btn {
