--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     gap: 3rem;
+    flex-wrap: wrap;
 
     .title__container {
       position: relative;
