--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -1,15 +1,19 @@
 .cards {
-  padding-top: 10px;
-  background-color: #ffbd5b;
+  padding: 5rem 0;
+  background: linear-gradient(
+    235deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(255, 189, 91, 1) 34%
+  );
 
   &__container {
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 3rem;
 
     .title__container {
       position: relative;
@@ -32,6 +36,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
+
       .starImg {
         position: absolute;
         bottom: -13px;
@@ -40,29 +45,32 @@
         height: 56.42px;
       }
     }
+
     .content {
       display: flex;
       justify-content: center;
       flex-direction: row;
       align-items: center;
-      gap: 60px;
+      gap: 4rem;
       flex-wrap: wrap;
       padding-bottom: 10px;
 
       .card {
-        width: 415px;
-        border-radius: 15px;
+        width: 35%;
+        border-radius: 20px;
         background: linear-gradient(to top, white 70%, transparent 0);
         border: none;
       }
+
       .card-body {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        padding-top: 0;
 
         .button-main {
-          width: 100px;
+          padding: 0.5rem 0.5rem;
         }
       }
     }
