--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -6,8 +6,8 @@
   justify-content: center;
   background: linear-gradient(
     135deg,
-    rgba(237, 142, 142, 0.5) 0%,
-    rgba(255, 189, 91, 1) 34%
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(255, 169, 41) 34%
   );
 
   &__container {
