--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -7,7 +7,7 @@
   background: linear-gradient(
     320deg,
     rgba(255, 255, 255, 0.5) 0%,
-    rgba(255, 189, 91, 1) 34%
+    rgb(255, 169, 41) 34%
   );
 
   &__container {
