--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -3,7 +3,7 @@
   background: linear-gradient(
     235deg,
     rgba(255, 255, 255, 0.5) 0%,
-    rgba(255, 189, 91, 1) 34%
+    rgba(255, 169, 41) 34%
   );
 
   &__container {
