--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -1,10 +1,18 @@
-.hero {
-  height: 100vh;
+.hero.light {
   background: linear-gradient(
     45deg,
     rgba(255, 255, 255, 0.5) 0%,
     rgba(255, 169, 41) 34%
   );
+}
+.hero.dark {
+  background: linear-gradient(
+    225deg,
+    #010060 0%,
+    #C4CDFF 99.43%);
+}
+.hero {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
