--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -1,14 +1,23 @@
+.jeea.dark {
+  background: linear-gradient(
+    225deg,
+    #010060 0%,
+    #C4CDFF 99.43%);
+}
+.jeea.light {
+  background: linear-gradient(
+    320deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgb(255, 169, 41) 34%
+  );
+}
+
 .jeea {
   padding: 10px;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-    320deg,
-    rgba(255, 255, 255, 0.5) 0%,
-    rgb(255, 169, 41) 34%
-  );
 
   &__container {
     width: 75%;
