--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -1,10 +1,20 @@
-.cards {
-  padding: 5rem 0;
+.cards.light {
   background: linear-gradient(
     235deg,
     rgba(255, 255, 255, 0.5) 0%,
     rgba(255, 169, 41) 34%
   );
+}
+.cards.dark {
+  background: linear-gradient(
+    315deg,
+    #010060 0%,
+    #C4CDFF 99.43%
+  );
+}
+
+.cards {
+  padding: 5rem 0;
 
   &__container {
     width: 75%;
