--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -1,3 +1,11 @@
+.container.dark {
+  background: linear-gradient(
+    315deg,
+    #010060 0%,
+    #C4CDFF 99.43%
+    );
+}
+
 .container {
   display: flex;
   flex-direction: column;
