--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -26,7 +26,7 @@
         margin: 10px auto;
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         border-radius: 20px;
         padding: 0.75rem 1.5rem;
         width: fit-content;
@@ -70,7 +70,6 @@
         border-radius: 10px;
       }
       textarea {
-        max-height: 10rem;
         min-height: 10rem;
         border-radius: 10px;
         white-space: pre;
@@ -95,6 +94,19 @@
         font-size: 20px;
         cursor: pointer;
       }
+    }
+  }
+}
+
+
+@media (max-width : 764px) {
+  .container {
+    height: 100vh;
+    padding: 0;
+  }
+  .contactForm {
+    textarea {
+      height: 100px;
     }
   }
 }
