--- a/frontend/src/components/Error/Error.scss
+++ b/frontend/src/components/Error/Error.scss
@@ -3,19 +3,62 @@
     color: #fff;
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .Error_content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    position: relative;
     border-radius: 15px;
     padding: 2rem;
     width: 80%;
     text-align: center;
     box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
 }
+.starImg1 {
+    position: absolute;
+    width: 8rem;
+    top: -29%;
+    left: -8%;
+    animation: slide-right infinite linear 8s;
+}
+.starImg2 {
+    position: absolute;
+    bottom: -30%;
+    width: 8rem;
+    right: -8%;
+    animation: slide-left infinite linear 8s;
+}
+  
+/***** Slide Right *****/
+@keyframes slide-right {
+    from { left: -4%; }
+    10%  { left: 20%; }
+    20%  { left: 40%; }
+    30%  { left: 60%; }
+    40%  { left: 80%; }
+    50%  { left: 93%;}
+    60%  { left: 80%;}
+    70%  { left: 60%;}
+    80%  { left: 40%;}
+    90%  { left: 20%;}
+    to   { left: -4%; } 
+}
+/***** Slide Left *****/
+@keyframes slide-left {
+    from { right: -4%; }
+    10%  { right: 20%; }
+    20%  { right: 40%; }
+    30%  { right: 60%; }
+    40%  { right: 80%; }
+    50%  { right: 93%;}
+    60%  { right: 80%;}
+    70%  { right: 60%;}
+    80%  { right: 40%;}
+    90%  { right: 20%;}
+    to   { right: -4%; } 
+}
+ 
 
 .glitch-effect {
 position: relative;
@@ -272,3 +315,9 @@ color: #11B7F2;
     transform: translate(0, -3px);
 }
 }
+
+
+/* animating */
+
+
+ 
