major changes + dark/light mode added

--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -5,12 +5,11 @@
     rgba(255, 169, 41) 34%
   );
 }
+
 .hero.dark {
-  background: linear-gradient(
-    225deg,
-    #010060 0%,
-    #C4CDFF 99.43%);
+  background: linear-gradient(225deg, #010060 0%, #c4cdff 99.43%);
 }
+
 .hero {
   height: 100vh;
   display: flex;
