--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -3,14 +3,10 @@
     135deg,
     rgba(255, 255, 255, 0.5) 0%,
     rgba(255, 169, 41) 34%
-    );
+  );
 }
 .cjem.dark {
-  background: linear-gradient(
-    315deg,
-    #010060 0%,
-    #C4CDFF 99.43%
-    );
+  background: linear-gradient(315deg, #010060 0%, #c4cdff 99.43%);
 }
 .cjem {
   padding: 10px;
@@ -19,6 +15,13 @@
   align-items: center;
   justify-content: center;
 
+  &__gif {
+    position: absolute;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: soft-light;
+  }
 
   &__container {
     width: 75%;
