some temporary changes

--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -6,11 +6,7 @@
   );
 }
 .cards.dark {
-  background: linear-gradient(
-    315deg,
-    #010060 0%,
-    #C4CDFF 99.43%
-  );
+  background: linear-gradient(315deg, #010060 0%, #c4cdff 99.43%);
 }
 
 .cards {
