--- a/frontend/src/components/footer/Footer.scss
+++ b/frontend/src/components/footer/Footer.scss
@@ -139,3 +139,24 @@ $background-color_1: var(--dark-color);
     margin: 0;
   }
 }
+
+@media (max-width: 967px) {
+  .footer-clean .content {
+    padding: 1rem;
+  }
+  .content_flex {
+    flex-direction: column;
+    gap: 3rem;
+    .left_side {
+      .footer_nav ul {
+        justify-content: center;
+        padding: 0;
+      }
+    }
+    .right_side {
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
