--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -1,9 +1,5 @@
 .container.dark {
-  background: linear-gradient(
-    315deg,
-    #010060 0%,
-    #C4CDFF 99.43%
-    );
+  background: linear-gradient(315deg, #010060 0%, #c4cdff 99.43%);
 }
 
 .container {
@@ -103,6 +99,18 @@
         font-size: 20px;
         cursor: pointer;
       }
+    }
+  }
+}
+
+@media (max-width: 764px) {
+  .container {
+    height: 100vh;
+    padding: 0;
+  }
+  .contactForm {
+    textarea {
+      height: 100px;
     }
   }
 }
