--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -10,9 +10,13 @@
 }
 .cjem {
   padding: 10px;
+  width: 100%;
+  
   @media screen and (min-width:1200px) {
+   
     height: 100vh;  
 }
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,7 +35,7 @@
         background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
-        font-size: 3rem;
+        font-size: 2.5rem;
         border-radius: 20px;
         padding: 0.75rem 1.5rem;
         width: fit-content;
@@ -61,7 +65,7 @@
       justify-content: space-around;
       align-items: center;
       gap: 5rem;
-      
+      width: 100%;
       @media screen and (max-width:1200px) {
                  flex-wrap: wrap;    
       }
@@ -83,6 +87,9 @@
 
   .cjemImg {
     width: 25rem;
+    @media screen and (max-width:1200px) {
+      width: 20rem;  
+}
   }
 }
 
