--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -17,6 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
   @media screen and (min-width:1200px) {
     height: 100vh;  
 }
@@ -34,7 +35,7 @@
         background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
-        font-size: 3rem;
+        font-size: 2.5rem;
         border-radius: 20px;
         padding: 0.75rem 1.5rem;
         width: fit-content;
@@ -65,6 +66,7 @@
       justify-content: space-around;
       align-items: center;
       gap: 5rem;
+      width: 100%;
       @media screen and (max-width:1200px) {
         flex-wrap: wrap;    
 }
@@ -85,5 +87,8 @@
 
   .jeeaImg {
     width: 25rem;
+    @media screen and (max-width:1200px) {
+      width: 20rem;  
+}
   }
 }
