--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
   align-items: center;
   z-index: -1;
-  padding: 0px 90px;
   -webkit-backdrop-filter: blur(24px);
   backdrop-filter: blur(24px);
   border-radius: 10px;
@@ -19,6 +18,8 @@
   box-shadow: 0px 1px 7px 4px rgb(0 0 0 / 15%);
   justify-content: center;
   margin-top: 4rem;
+  margin: auto;
+  padding: 70px;
 
   .content {
     width: 90%;
@@ -68,7 +69,7 @@
       justify-content: center;
       gap: 10px;
       .name_input {
-        width: 50%;
+        width: 100%;
       }
     }
     .input {
@@ -104,5 +105,21 @@
         cursor: pointer;
       }
     }
+  }
+}
+
+
+@media (max-width : 764px) {
+  .container {
+    padding: 0;
+  }
+  .contactForm {
+    .Name_Area {
+      flex-direction: column;
+    } 
+    textarea {
+      height: 100px;
+    }
+    
   }
 }
