--- a/frontend/src/components/footer/Footer.scss
+++ b/frontend/src/components/footer/Footer.scss
@@ -39,6 +39,7 @@ $background-color_1: var(--dark-color);
     line-height: 1.6;
     font-size: 1rem;
     margin-bottom: 0;
+    padding: 0;
     a {
       padding: 12px;
       color: $color_2;
@@ -57,7 +58,7 @@ $background-color_1: var(--dark-color);
     width: auto;
     text-align: center;
     i {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       color: $color_3;
       &:hover {
         color: $color_4;
@@ -86,12 +87,24 @@ $background-color_1: var(--dark-color);
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: center;
-      margin: 20px;
+      margin: 20px 0px 20px 0px;
       .logo {
         margin-right: 30px;
+        position: relative;
+      }
+      .logo::after {
+        content: '';
+        content: "";
+        position: absolute;
+        height: 54%;
+        width: 3px;
+        background-color: white;
+        top: 11px;
+        right: -21px;
       }
       .item_social a {
         padding: 0.5rem;
+        margin: 0 8px;
       }
     }
   }
@@ -125,4 +138,30 @@ $background-color_1: var(--dark-color);
   p {
     margin: 0;
   }
+}
+
+
+
+
+/*_________ those are changes i've made ____________*/
+@media (max-width : 967px) {
+  .footer-clean .content {
+    padding: 1rem;
+  }
+  .content_flex {
+    flex-direction: column;
+    gap: 3rem;
+    .left_side {
+      .footer_nav ul {
+        justify-content: center;
+        padding: 0;
+      }
+    }
+    .right_side {
+      p {
+        text-align: center;
+      }
+    }
+  }
+
 }
