--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -12,6 +12,7 @@
 
 .hero {
   height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +21,12 @@
   &__line {
     position: absolute;
     right: 21%;
-    height: 19rem;
+    height: 20rem;
+
+    @media only screen and (max-width: 900px) {
+      right: 10%;
+      height: 15rem;
+    }
   }
 
   &__decoration {
@@ -31,24 +37,23 @@
   }
 
   &__content {
-    width: 60%;
+    width: 70%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.8rem;
 
     &-jeea {
       font-size: 10vw;
     }
 
-    &-text {
+    &-slogan {
       color: var(--dark-color);
       line-height: 8vh;
-      font-size: 3.5vw;
+      font-size: 3vw;
       font-weight: 1000;
-      margin-bottom: 2rem;
       max-width: 80%;
 
       @media only screen and (max-width: 1000px) {
@@ -56,10 +61,85 @@
       }
     }
 
+    &-text {
+      max-width: 70%;
+      font-size: 1.3vw;
+      color: var(--dark-color);
+    }
+
     &-buttons {
       display: flex;
       gap: 0.5rem;
       height: 1.5rem;
+    }
+
+    @media only screen and (max-width: 900px) {
+      width: 80%;
+
+      &-jeea {
+        font-size: 5.5rem;
+      }
+
+      &-slogan {
+        width: 100%;
+        font-size: 1.8rem;
+        line-height: 2rem;
+      }
+
+      &-text {
+        font-size: 0.9rem;
+      }
+    }
+
+    @media only screen and (max-width: 900px) {
+      width: 90%;
+
+      &-jeea {
+        font-size: 5.5rem;
+      }
+
+      &-buttons {
+        flex-direction: column;
+        align-items: center;
+        width: 45%;
+        height: auto;
+      }
+
+      &-slogan {
+        width: 100%;
+        font-size: 1.8rem;
+        line-height: 2rem;
+      }
+
+      &-text {
+        font-size: 0.9rem;
+      }
+    }
+
+    @media only screen and (max-width: 450px) {
+      width: 95%;
+
+      &-jeea {
+        font-size: 5rem;
+      }
+
+      &-buttons {
+        flex-direction: column;
+        align-items: center;
+        width: 45%;
+        height: auto;
+      }
+
+      &-slogan {
+        width: 100%;
+        font-size: 1.4rem;
+        line-height: 1.85rem;
+      }
+
+      &-text {
+        max-width: 75%;
+        font-size: 0.9rem;
+      }
     }
   }
 }
