--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -1,7 +1,3 @@
-.container.dark {
-  background: linear-gradient(315deg, #010060 0%, #c4cdff 99.43%);
-}
-
 .container {
   display: flex;
   flex-direction: column;
@@ -20,16 +16,18 @@
   .content {
     width: 90%;
   }
+
   .contact-text {
     text-align: center;
     margin: 15px;
+
     .title__container {
       position: relative;
       width: fit-content;
       margin: auto;
+
       .title {
         margin: 10px auto;
-        box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
         font-size: 2.5rem;
         border-radius: 20px;
@@ -37,15 +35,10 @@
         width: fit-content;
         text-align: center;
         border: 1px solid white;
-        background: radial-gradient(
-          51.72% 61.73% at 50% 50%,
-          #4358ff 0%,
-          #1f2656 63.85%
-        );
         background-clip: text;
         -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
       }
+
       .starImg {
         position: absolute;
         bottom: -15px;
@@ -54,12 +47,11 @@
         height: 3rem;
       }
     }
-    p {
-      color: rgba(17, 22, 92, 1);
-    }
   }
 
   .contactForm {
+    display: flex;
+    flex-direction: column;
     .Name_Area {
       display: flex;
       justify-content: center;
@@ -82,48 +74,29 @@
         resize: none;
       }
     }
-    .submit_btn {
-      margin: 15px auto;
-      width: 13rem;
-      height: 3rem;
-      background: linear-gradient(180deg, #1614d1 0%, #1f2656 35.94%);
-      border-radius: 10px;
-      text-align: center;
-      line-height: 3.5rem;
-      cursor: pointer;
-      input {
-        border: none;
-        background: transparent;
-        color: rgba(255, 255, 255, 1);
-        font-weight: 700px;
-        line-height: 24px;
-        font-size: 20px;
-        cursor: pointer;
-      }
-    }
   }
 }
 
-@media (max-width: 1400px){
-.container {
+@media (max-width: 1400px) {
+  .container {
     padding: 0;
     height: 100%;
+  }
 }
-}
-@media (max-width : 764px) {
+@media (max-width: 764px) {
   .container {
     padding: 0;
   }
   .contactForm {
     .Name_Area {
       flex-direction: column;
-    } 
+    }
     textarea {
       height: 100px;
     }
-  } 
+  }
 }
-@media (max-width : 390px) {
+@media (max-width: 390px) {
   .container .contact-text .title__container .title {
     font-size: 1.7rem;
   }
