--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -1,26 +1,15 @@
-.cards.light {
-  background: linear-gradient(
-    235deg,
-    rgba(255, 255, 255, 0.5) 0%,
-    rgba(255, 169, 41) 34%
-  );
-}
-.cards.dark {
-  background: linear-gradient(315deg, #010060 0%, #c4cdff 99.43%);
-}
-
 .cards {
-  padding: 5rem 0;
+  padding: 6rem 0;
 
   &__container {
-    width: 75%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-   
+
     .title__container {
       position: relative;
 
@@ -33,14 +22,8 @@
         width: fit-content;
         text-align: center;
         border: 1px solid white;
-        background: radial-gradient(
-          51.72% 61.73% at 50% 50%,
-          #4358ff 0%,
-          #1f2656 63.85%
-        );
         background-clip: text;
         -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
       }
 
       .starImg {
@@ -53,24 +36,27 @@
     }
 
     .content {
+      color: var(--secondary-color);
       display: flex;
       justify-content: center;
       flex-direction: row;
       align-items: center;
       gap: 4rem;
-      
+
       padding-bottom: 10px;
-      @media screen and (max-width:950px) {
+
+      @media screen and (max-width: 950px) {
         flex-direction: column;
-    }
+      }
+
       .card {
         width: 35%;
         border-radius: 20px;
         background: linear-gradient(to top, white 70%, transparent 0);
         border: none;
-        @media screen and (max-width:950px) {
+        @media screen and (max-width: 950px) {
           width: 90%;
-      }
+        }
       }
 
       .card-body {
@@ -79,15 +65,6 @@
         align-items: center;
         justify-content: center;
         padding-top: 0;
-        a{
-          width: 100%;
-        }
-        .button-main {
-          padding: 0.5rem 0.5rem;
-          @media screen and (max-width:950px) {
-            width: 100%;
-        }
-        }
       }
     }
   }
