--- a/frontend/src/pages/ServicesPage/ServicesPage.scss
+++ b/frontend/src/pages/ServicesPage/ServicesPage.scss
@@ -45,7 +45,7 @@
   align-items: center;
   padding: 1rem 0;
   position: relative;
-  width: 100%;
+  width: 80%;
 
   &-container {
     display: flex;
@@ -92,7 +92,7 @@
 }
 
 // Cards Container
-.cards-container {
+.services__cards-container {
   padding: 2rem 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
